Introduce usage of streamable